k8s/foodrush/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodrush
  labels:
    app: foodrush
