k8s/foodrush/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodrush-ingress
  namespace: foodrush
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

spec:
  # Uncomment for TLS
  # tls:
  #   - hosts:
  #       - foodrush.yourdomain.com
  #     secretName: foodrush-tls
  rules:
    # - host: foodrush.yourdomain.com     # ← Change this to your domain or LoadBalancer DNS
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001

          - path: /api/restaurants
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 8002

          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8003
                  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
